--- a/examples/fiware/requirements.txt
+++ b/examples/fiware/requirements.txt
@@ -1,7 +1,9 @@
+filip==0.4.1
 Jinja2==3.1.3
+morph_kgc==2.8.1
 pydantic==2.10.4
 rapidfuzz==3.4.0
 rdflib==7.1.1
 reasonable==0.2.6
-Requests==2.32.3
 jsonpath-ng==1.7.0
+owlrl==6.0.2
