feat: add support for selecting ontology dynamically
- Added support for users to choose their preferred ontology (`brick` or `saref4bldg`) when running preprocessing and mapping generation scripts.
- Made small changes in `rml_preprocess.py` and `rml_generate.py` to allow ontology selection.
- Updated `readme.md` to reflect the changes.

--- a/examples/fiware/kgcp/fiware_config.json
+++ b/examples/fiware/kgcp/fiware_config.json
@@ -6,6 +6,10 @@
     "JSONPATH_EXTRA_NODES": [
         "$..fanSpeed",
         "$..airFlowSetpoint",
-        "$..temperatureSetpoint"
+        "$..temperatureSetpoint",
+        "$..temperature",
+        "$..co2",
+        "$..pir",
+        "$..temperatureAmb"
     ]
 }
