docs: complete readme for fiware example

--- a/examples/fiware/application_deployment/controller_configs/example.yml
+++ b/examples/fiware/application_deployment/controller_configs/example.yml
@@ -1,4 +1,4 @@
-- controller_function: Ventilation
+- controller_function: Ventilation  # Control function Ventilation/Heating/Cooling
   controller_mode: <...>  # co2/presence/timetable
   inputs:
     sensor_access: <...>  # URL to access the sensor data
