test: add test for RML preprocess

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /examples/fiware/kgcp/rml/rdf_node_relationship.json
 local_test/
 /semantic_iot.egg-info/
+/test/test_relationship_finder/openhab_node_relationship.json
+/test/test_relationship_finder/openhab_multiple_members_node_relationship.json
+/test/test_relationship_finder/fiware_node_relationship.json
