chore: update controller config in example

--- a/examples/fiware/application_deployment/controller_configs/fiware_entities_10rooms_inferred.yml
+++ b/examples/fiware/application_deployment/controller_configs/fiware_entities_10rooms_inferred.yml
@@ -1,12 +1,9 @@
 - controller_function: Ventilation
   controller_mode: co2
   inputs:
-    sensor_access: https://fiware.eonerc.rwth-aachen.de/v2/entities/CO2Sensor:room_base_1/attrs/co2/value
-    sensor_http:
+    sensor_access:
       method: GET
       url: https://fiware.eonerc.rwth-aachen.de/v2/entities/CO2Sensor:room_base_1/attrs/co2/value
-      path: /v2/entities/CO2Sensor:room_base_1/attrs/co2/value
-      authority: fiware.eonerc.rwth-aachen.de
       headers:
         fiware-service: null
         fiware-servicepath: /
@@ -14,12 +11,9 @@
         type: null
       request_node: http://www.example.org/api#GET__v2_entities_CO2Sensor_room_base_1_attrs_co2_value
   outputs:
-    actuation_access: https://fiware.eonerc.rwth-aachen.de/v2/entities/FreshAirVentilation:room_base_1/attrs/airFlowSetpoint/value
-    actuation_http:
+    actuation_access:
       method: PUT
       url: https://fiware.eonerc.rwth-aachen.de/v2/entities/FreshAirVentilation:room_base_1/attrs/airFlowSetpoint/value
-      path: /v2/entities/FreshAirVentilation:room_base_1/attrs/airFlowSetpoint/value
-      authority: fiware.eonerc.rwth-aachen.de
       headers:
         Content-Type: null
         fiware-service: null
@@ -30,12 +24,9 @@
 - controller_function: Ventilation
   controller_mode: co2
   inputs:
-    sensor_access: https://fiware.eonerc.rwth-aachen.de/v2/entities/CO2Sensor:room_base_10/attrs/co2/value
-    sensor_http:
+    sensor_access:
       method: GET
       url: https://fiware.eonerc.rwth-aachen.de/v2/entities/CO2Sensor:room_base_10/attrs/co2/value
-      path: /v2/entities/CO2Sensor:room_base_10/attrs/co2/value
-      authority: fiware.eonerc.rwth-aachen.de
       headers:
         fiware-service: null
         fiware-servicepath: /
@@ -43,12 +34,9 @@
         type: null
       request_node: http://www.example.org/api#GET__v2_entities_CO2Sensor_room_base_10_attrs_co2_value
   outputs:
-    actuation_access: https://fiware.eonerc.rwth-aachen.de/v2/entities/FreshAirVentilation:room_base_10/attrs/airFlowSetpoint/value
-    actuation_http:
+    actuation_access:
       method: PUT
       url: https://fiware.eonerc.rwth-aachen.de/v2/entities/FreshAirVentilation:room_base_10/attrs/airFlowSetpoint/value
-      path: /v2/entities/FreshAirVentilation:room_base_10/attrs/airFlowSetpoint/value
-      authority: fiware.eonerc.rwth-aachen.de
       headers:
         Content-Type: null
         fiware-service: null
@@ -59,12 +47,9 @@
 - controller_function: Ventilation
   controller_mode: co2
   inputs:
-    sensor_access: https://fiware.eonerc.rwth-aachen.de/v2/entities/CO2Sensor:room_base_2/attrs/co2/value
-    sensor_http:
+    sensor_access:
       method: GET
       url: https://fiware.eonerc.rwth-aachen.de/v2/entities/CO2Sensor:room_base_2/attrs/co2/value
-      path: /v2/entities/CO2Sensor:room_base_2/attrs/co2/value
-      authority: fiware.eonerc.rwth-aachen.de
       headers:
         fiware-service: null
         fiware-servicepath: /
@@ -72,12 +57,9 @@
         type: null
       request_node: http://www.example.org/api#GET__v2_entities_CO2Sensor_room_base_2_attrs_co2_value
   outputs:
-    actuation_access: https://fiware.eonerc.rwth-aachen.de/v2/entities/FreshAirVentilation:room_base_2/attrs/airFlowSetpoint/value
-    actuation_http:
+    actuation_access:
       method: PUT
       url: https://fiware.eonerc.rwth-aachen.de/v2/entities/FreshAirVentilation:room_base_2/attrs/airFlowSetpoint/value
-      path: /v2/entities/FreshAirVentilation:room_base_2/attrs/airFlowSetpoint/value
-      authority: fiware.eonerc.rwth-aachen.de
       headers:
         Content-Type: null
         fiware-service: null
@@ -88,12 +70,9 @@
 - controller_function: Ventilation
   controller_mode: co2
   inputs:
-    sensor_access: https://fiware.eonerc.rwth-aachen.de/v2/entities/CO2Sensor:room_base_3/attrs/co2/value
-    sensor_http:
+    sensor_access:
       method: GET
       url: https://fiware.eonerc.rwth-aachen.de/v2/entities/CO2Sensor:room_base_3/attrs/co2/value
-      path: /v2/entities/CO2Sensor:room_base_3/attrs/co2/value
-      authority: fiware.eonerc.rwth-aachen.de
       headers:
         fiware-service: null
         fiware-servicepath: /
@@ -101,12 +80,9 @@
         type: null
       request_node: http://www.example.org/api#GET__v2_entities_CO2Sensor_room_base_3_attrs_co2_value
   outputs:
-    actuation_access: https://fiware.eonerc.rwth-aachen.de/v2/entities/FreshAirVentilation:room_base_3/attrs/airFlowSetpoint/value
-    actuation_http:
+    actuation_access:
       method: PUT
       url: https://fiware.eonerc.rwth-aachen.de/v2/entities/FreshAirVentilation:room_base_3/attrs/airFlowSetpoint/value
-      path: /v2/entities/FreshAirVentilation:room_base_3/attrs/airFlowSetpoint/value
-      authority: fiware.eonerc.rwth-aachen.de
       headers:
         Content-Type: null
         fiware-service: null
@@ -117,12 +93,9 @@
 - controller_function: Ventilation
   controller_mode: co2
   inputs:
-    sensor_access: https://fiware.eonerc.rwth-aachen.de/v2/entities/CO2Sensor:room_base_4/attrs/co2/value
-    sensor_http:
+    sensor_access:
       method: GET
       url: https://fiware.eonerc.rwth-aachen.de/v2/entities/CO2Sensor:room_base_4/attrs/co2/value
-      path: /v2/entities/CO2Sensor:room_base_4/attrs/co2/value
-      authority: fiware.eonerc.rwth-aachen.de
       headers:
         fiware-service: null
         fiware-servicepath: /
@@ -130,12 +103,9 @@
         type: null
       request_node: http://www.example.org/api#GET__v2_entities_CO2Sensor_room_base_4_attrs_co2_value
   outputs:
-    actuation_access: https://fiware.eonerc.rwth-aachen.de/v2/entities/FreshAirVentilation:room_base_4/attrs/airFlowSetpoint/value
-    actuation_http:
+    actuation_access:
       method: PUT
       url: https://fiware.eonerc.rwth-aachen.de/v2/entities/FreshAirVentilation:room_base_4/attrs/airFlowSetpoint/value
-      path: /v2/entities/FreshAirVentilation:room_base_4/attrs/airFlowSetpoint/value
-      authority: fiware.eonerc.rwth-aachen.de
       headers:
         Content-Type: null
         fiware-service: null
@@ -146,12 +116,9 @@
 - controller_function: Ventilation
   controller_mode: co2
   inputs:
-    sensor_access: https://fiware.eonerc.rwth-aachen.de/v2/entities/CO2Sensor:room_base_5/attrs/co2/value
-    sensor_http:
+    sensor_access:
       method: GET
       url: https://fiware.eonerc.rwth-aachen.de/v2/entities/CO2Sensor:room_base_5/attrs/co2/value
-      path: /v2/entities/CO2Sensor:room_base_5/attrs/co2/value
-      authority: fiware.eonerc.rwth-aachen.de
       headers:
         fiware-service: null
         fiware-servicepath: /
@@ -159,12 +126,9 @@
         type: null
       request_node: http://www.example.org/api#GET__v2_entities_CO2Sensor_room_base_5_attrs_co2_value
   outputs:
-    actuation_access: https://fiware.eonerc.rwth-aachen.de/v2/entities/FreshAirVentilation:room_base_5/attrs/airFlowSetpoint/value
-    actuation_http:
+    actuation_access:
       method: PUT
       url: https://fiware.eonerc.rwth-aachen.de/v2/entities/FreshAirVentilation:room_base_5/attrs/airFlowSetpoint/value
-      path: /v2/entities/FreshAirVentilation:room_base_5/attrs/airFlowSetpoint/value
-      authority: fiware.eonerc.rwth-aachen.de
       headers:
         Content-Type: null
         fiware-service: null
@@ -175,12 +139,9 @@
 - controller_function: Ventilation
   controller_mode: co2
   inputs:
-    sensor_access: https://fiware.eonerc.rwth-aachen.de/v2/entities/CO2Sensor:room_base_6/attrs/co2/value
-    sensor_http:
+    sensor_access:
       method: GET
       url: https://fiware.eonerc.rwth-aachen.de/v2/entities/CO2Sensor:room_base_6/attrs/co2/value
-      path: /v2/entities/CO2Sensor:room_base_6/attrs/co2/value
-      authority: fiware.eonerc.rwth-aachen.de
       headers:
         fiware-service: null
         fiware-servicepath: /
@@ -188,12 +149,9 @@
         type: null
       request_node: http://www.example.org/api#GET__v2_entities_CO2Sensor_room_base_6_attrs_co2_value
   outputs:
-    actuation_access: https://fiware.eonerc.rwth-aachen.de/v2/entities/FreshAirVentilation:room_base_6/attrs/airFlowSetpoint/value
-    actuation_http:
+    actuation_access:
       method: PUT
       url: https://fiware.eonerc.rwth-aachen.de/v2/entities/FreshAirVentilation:room_base_6/attrs/airFlowSetpoint/value
-      path: /v2/entities/FreshAirVentilation:room_base_6/attrs/airFlowSetpoint/value
-      authority: fiware.eonerc.rwth-aachen.de
       headers:
         Content-Type: null
         fiware-service: null
@@ -204,12 +162,9 @@
 - controller_function: Ventilation
   controller_mode: co2
   inputs:
-    sensor_access: https://fiware.eonerc.rwth-aachen.de/v2/entities/CO2Sensor:room_base_7/attrs/co2/value
-    sensor_http:
+    sensor_access:
       method: GET
       url: https://fiware.eonerc.rwth-aachen.de/v2/entities/CO2Sensor:room_base_7/attrs/co2/value
-      path: /v2/entities/CO2Sensor:room_base_7/attrs/co2/value
-      authority: fiware.eonerc.rwth-aachen.de
       headers:
         fiware-service: null
         fiware-servicepath: /
@@ -217,12 +172,9 @@
         type: null
       request_node: http://www.example.org/api#GET__v2_entities_CO2Sensor_room_base_7_attrs_co2_value
   outputs:
-    actuation_access: https://fiware.eonerc.rwth-aachen.de/v2/entities/FreshAirVentilation:room_base_7/attrs/airFlowSetpoint/value
-    actuation_http:
+    actuation_access:
       method: PUT
       url: https://fiware.eonerc.rwth-aachen.de/v2/entities/FreshAirVentilation:room_base_7/attrs/airFlowSetpoint/value
-      path: /v2/entities/FreshAirVentilation:room_base_7/attrs/airFlowSetpoint/value
-      authority: fiware.eonerc.rwth-aachen.de
       headers:
         Content-Type: null
         fiware-service: null
@@ -233,12 +185,9 @@
 - controller_function: Ventilation
   controller_mode: co2
   inputs:
-    sensor_access: https://fiware.eonerc.rwth-aachen.de/v2/entities/CO2Sensor:room_base_8/attrs/co2/value
-    sensor_http:
+    sensor_access:
       method: GET
       url: https://fiware.eonerc.rwth-aachen.de/v2/entities/CO2Sensor:room_base_8/attrs/co2/value
-      path: /v2/entities/CO2Sensor:room_base_8/attrs/co2/value
-      authority: fiware.eonerc.rwth-aachen.de
       headers:
         fiware-service: null
         fiware-servicepath: /
@@ -246,12 +195,9 @@
         type: null
       request_node: http://www.example.org/api#GET__v2_entities_CO2Sensor_room_base_8_attrs_co2_value
   outputs:
-    actuation_access: https://fiware.eonerc.rwth-aachen.de/v2/entities/FreshAirVentilation:room_base_8/attrs/airFlowSetpoint/value
-    actuation_http:
+    actuation_access:
       method: PUT
       url: https://fiware.eonerc.rwth-aachen.de/v2/entities/FreshAirVentilation:room_base_8/attrs/airFlowSetpoint/value
-      path: /v2/entities/FreshAirVentilation:room_base_8/attrs/airFlowSetpoint/value
-      authority: fiware.eonerc.rwth-aachen.de
       headers:
         Content-Type: null
         fiware-service: null
@@ -262,12 +208,9 @@
 - controller_function: Ventilation
   controller_mode: co2
   inputs:
-    sensor_access: https://fiware.eonerc.rwth-aachen.de/v2/entities/CO2Sensor:room_base_9/attrs/co2/value
-    sensor_http:
+    sensor_access:
       method: GET
       url: https://fiware.eonerc.rwth-aachen.de/v2/entities/CO2Sensor:room_base_9/attrs/co2/value
-      path: /v2/entities/CO2Sensor:room_base_9/attrs/co2/value
-      authority: fiware.eonerc.rwth-aachen.de
       headers:
         fiware-service: null
         fiware-servicepath: /
@@ -275,12 +218,9 @@
         type: null
       request_node: http://www.example.org/api#GET__v2_entities_CO2Sensor_room_base_9_attrs_co2_value
   outputs:
-    actuation_access: https://fiware.eonerc.rwth-aachen.de/v2/entities/FreshAirVentilation:room_base_9/attrs/airFlowSetpoint/value
-    actuation_http:
+    actuation_access:
       method: PUT
       url: https://fiware.eonerc.rwth-aachen.de/v2/entities/FreshAirVentilation:room_base_9/attrs/airFlowSetpoint/value
-      path: /v2/entities/FreshAirVentilation:room_base_9/attrs/airFlowSetpoint/value
-      authority: fiware.eonerc.rwth-aachen.de
       headers:
         Content-Type: null
         fiware-service: null
